tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_missing_implementation/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Method `method2` from trait `Default2` is not implemented
   ┌─ src/main.nr:14:23
   │
14 │     impl Default2 for Foo {
   │                       --- Please implement method2 here
   │

Aborting due to 1 previous error
